@@ -208,6 +208,38 @@ int __pthread_detach (struct task_struct *curr, struct pt_regs *regs)
     return -pthread_detach(k_tid);
 }
 
+static int __pthread_shadow (struct task_struct *curr,
+			     struct pse51_hkey *hkey,
+			     struct sched_param *param)
+{
+    pthread_attr_t attr;
+    pthread_t k_tid;
+    int err;
+
+    pthread_attr_init(&attr);
+    attr.policy = SCHED_FIFO;
+    attr.schedparam = *param;
+    attr.fp = 1;
+    attr.name = curr->comm;
+
+    err = pthread_create(&k_tid,&attr,NULL,NULL);
+
+    if (err)
+	return -err;
+
+    err = xnshadow_map(&k_tid->threadbase,NULL);
+
+    if (!err && !__pthread_hash(hkey,k_tid))
+	err = -ENOMEM;
+
+    if (err)
+        pse51_thread_abort(k_tid, NULL);
+    else
+	k_tid->hkey = *hkey;
+	
+    return err;
+}
+
 int __pthread_setschedparam (struct task_struct *curr, struct pt_regs *regs)
 
 { 
@@ -225,14 +257,19 @@ int __pthread_setschedparam (struct task_struct *curr, struct pt_regs *regs)
     if (!__xn_access_ok(curr,VERIFY_READ,__xn_reg_arg3(regs),sizeof(param)))
 	return -EFAULT;
 
-    hkey.u_tid = __xn_reg_arg1(regs);
-    hkey.mm = curr->mm;
-    k_tid = __pthread_find(&hkey);
-
     __xn_copy_from_user(curr,
 			&param,
 			(void __user *)__xn_reg_arg3(regs),
 			sizeof(param));
+
+    hkey.u_tid = __xn_reg_arg1(regs);
+    hkey.mm = curr->mm;
+    k_tid = __pthread_find(&hkey);
+
+    if (!k_tid && __xn_reg_arg1(regs) == __xn_reg_arg4(regs))
+	/* If the syscall applies to "current", and the latter is not
+	   a fusion thread already, then shadow it. */
+	return __pthread_shadow(curr,&hkey,&param);
 
     return -pthread_setschedparam(k_tid,policy,&param);
 }
